--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-flic-buttons",
-  "version": "0.1.3",
+  "version": "0.2.0",
   "description": "A Node-RED node to inject events from flic buttons",
   "keywords": [
     "flic.io",
@@ -10,27 +10,30 @@
   "node-red": {
     "nodes": {
       "flic": "flic.js",
-	  "flic-button": "flic-button.js"
+      "flic-button": "flic-button.js"
     }
   },
   "author": {
-     "email":"hardillb@gmail.com",
-     "name" : "Benjamin Hardill",
-     "url"  : "http://www.hardill.me.uk/wordpress/"
+    "email": "hardillb@gmail.com",
+    "name": "Benjamin Hardill",
+    "url": "http://www.hardill.me.uk/wordpress/"
   },
   "contributors": [
-  	{
-  		"email":"giles@roadnight.name",
-  		"name":"Giles Roadnight",
-  		"url":"http://giles.roadnight.name"
-  	}
+    {
+      "email": "giles@roadnight.name",
+      "name": "Giles Roadnight",
+      "url": "http://giles.roadnight.name"
+    },
+    {
+      "email": "jhalbsgut@gmail.com",
+      "name": "Justin Halbsgut",
+      "url": "https://github.com/hufftheweevil"
+    }
   ],
   "license": "Apache-2.0",
-  "dependencies": {
-  },
-  "repository" :
-  {
-    "type" : "git"
-  , "url" : "https://github.com/hardillb/node-red-contrib-flic-buttons"
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hufftheweevil/node-red-contrib-flic-buttons"
   }
 }
