--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-flic-buttons",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "A Node-RED node to inject events from flic buttons",
   "keywords": [
     "flic.io",
@@ -10,7 +10,8 @@
   "node-red": {
     "nodes": {
       "flic": "flic.js",
-      "flic-button": "flic-button.js"
+      "flic-button": "flic-button.js",
+      "flic-server": "flic-server.js"
     }
   },
   "author": {
